Added node version

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "nodemon server.js"
   },
   "engines": {
-    "node": "8.9.3"
-  },  
+    "node": "5.0.0",
+    "npm": "4.6.1"
+    },  
   "author": "",
   "license": "ISC",
   "devDependencies": {
